# knot

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  make_demo.py  pyproject.toml
.github/workflows/: ci.yml
examples/shop/: __init__.py  customer.py  order.py
src/knot/: __init__.py  __main__.py  analyzer.py  cli.py  graph.py  render.py
tests/: test_analyzer.py  test_cli.py  test_graph.py
