[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knot-imports"
version = "0.1.0"
description = "Detect and visualize circular imports in Python projects."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "gazzycodes" }]
keywords = ["imports", "circular-imports", "static-analysis", "cli", "dependency-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gazzycodes/knot"
Repository = "https://github.com/gazzycodes/knot"
Issues = "https://github.com/gazzycodes/knot/issues"

[project.scripts]
knot = "knot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knot"]

[tool.ruff]
line-length = 90
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
